[gd_scene load_steps=3 format=3 uid="uid://dtmy0shj81mr1"]

[ext_resource type="Script" uid="uid://bba4hu8t00jm0" path="res://scenes/obstacles/thing.gd" id="1_7yvpp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wxrc4"]
radius = 34.0
height = 86.0

[node name="Thing" type="Node2D"]
script = ExtResource("1_7yvpp")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_wxrc4")

[node name="SpritePaper" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(-17, 28, -17.4441, 3.13182, -18, -28, 13, -26, 16, 2, -13, 5)

[node name="SpriteScissor" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(13, -25, -10, -34, -28, -13, 14, 5, 10, 24, -19, 29)

[node name="SpriteRock" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(-20, 25, -18, -30, 17, -29, -15, -5, 11, 22)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
